--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ __pycache__/
 # C extensions
 *.so
 
+# Data
+*.csv
+*.txt
+!foodbanks.csv
+
 # Distribution / packaging
 .Python
 build/
@@ -123,6 +128,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
+*env
 .env
 .venv
 env/
